add link title section databoks

--- a/app/pugs/sections/slide-databoks.pug
+++ b/app/pugs/sections/slide-databoks.pug
@@ -11,15 +11,20 @@ section#slide-databoks.slide-databoks
 				div.item
 					a(href="#")
 						img(src="images/thumbnail1.jpg", alt="")
+					a(href="#" class="title") Lorem ipsum dolor sit, amet consectetur adipisicing.
 				div.item
 					a(href="#")
 						img(src="images/thumbnail2.jpg", alt="")
+					a(href="#" class="title") Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, quos voluptatum?
 				div.item
 					a(href="#")
 						img(src="images/thumbnail3.jpg", alt="")
+					a(href="#" class="title") Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, qui dicta!
 				div.item
 					a(href="#")
 						img(src="images/thumbnail1.jpg", alt="")
+					a(href="#" class="title") Lorem ipsum dolor sit amet consectetur adipisicing.
 				div.item
 					a(href="#")
 						img(src="images/thumbnail3.jpg", alt="")
+					a(href="#" class="title") Lorem ipsum dolor sit amet consectetur adipisicing elit.
