add image banner

--- a/app/pugs/sections/hero-images.pug
+++ b/app/pugs/sections/hero-images.pug
@@ -9,7 +9,7 @@ section.hero-images
 			div#heroImages.sliderHero
 				div.item
 					figure
-						img(src="images/banner.jpg", alt="")
+						img(src="images/banner_iiw.jpg", alt="")
 					article
 						p.title.
 							Dear women, be at the same page with us
