--- a/app/pugs/includes/header.pug
+++ b/app/pugs/includes/header.pug
@@ -1,6 +1,6 @@
 header
 	.iiw-navbar
-		.container.no-padding-m
+		.container.no-padding-m.no-padding-tb
 			.row.no-gap
 				.col-md-6
 					.iiw-navbar-left
