--- a/app/styles/base/helper.scss
+++ b/app/styles/base/helper.scss
@@ -60,6 +60,13 @@ $offset: 20;
 .no-padding {
    padding: 0 !important;
 }
+
+.no-padding-tb {
+   @include breakpoint(tablet) {
+      padding: 0 !important;
+   }
+}
+
 .no-padding-m {
    @include breakpoint(mobile) {
       padding: 0 !important;
