modified english spell in navbar

--- a/app/pugs/includes/header.pug
+++ b/app/pugs/includes/header.pug
@@ -16,9 +16,9 @@ header
 							li
 								a(href="#", data-title="home") Home
 							li
-								a(href="#", data-title="slide-artikel") Artikel
+								a(href="#", data-title="slide-artikel") Article
 							li
-								a(href="#", data-title="slide-infografik") Infografik
+								a(href="#", data-title="slide-infografik") Infographic
 							li
 								a(href="#", data-title="motion") Motion
 							li
